--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
+dist: xenial
+
 language: python
 
 python:
-  # - "3.4"
-  # - "3.5"
+  - "3.4"
+  - "3.5"
   - "3.6"
-  # - "3.7"
+  - "3.7"
   # PyPy versions
   # - "pypy3.5"
 
 # command to run tests
-script: python setup.py test
+script:
+  - python setup.py build
+  - python setup.py test
