--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
   # - "pypy3.5"
 
 before_install:
-  - sudo apt-get install -y libdiscid
+  - sudo apt-get install -y libdiscid0
 
 # command to run tests
 script:
