--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
 
 before_install:
   - sudo apt-get install -y libdiscid0
+  - sudo apt-get install -y python-dbus
 
 # command to run tests
 script:
